[workspace]
members = [
  "crates/core",
  "crates/frame",
  "crates/codecs",
  "crates/modem",
  "crates/tools",
  "crates/bindings-python",
  "crates/build-helpers",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sandi2382/openham-modes"
homepage = "https://github.com/sandi2382/openham-modes"

[workspace.dependencies]
# Common dependencies used across crates
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"

# DSP and signal processing
rustfft = "6.0"
realfft = "3.0"

# Audio and sample handling
hound = "3.5"  # WAV file I/O
dasp = "0.11"  # Digital signal processing

# Serialization and config
toml = "0.8"
yaml-rust = "0.4"

# Testing
quickcheck = "1.0"
quickcheck_macros = "1.0"

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Additional dependencies
chrono = { version = "0.4", features = ["serde"] }
