[package]
name = "openham-frame"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Framing, FEC, and error correction for OpenHam digital modes"

[dependencies]
openham-core = { path = "../core" }
serde.workspace = true
serde_json = "1.0"
thiserror.workspace = true
tracing.workspace = true
crc32fast = "1.3"
flate2 = "1.0"

# Error correction
# Note: Add specific FEC libraries as needed (Reed-Solomon, convolutional codes, etc.)

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true

[features]
default = ["std"]
std = []