[package]
name = "openham-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI tools for OpenHam digital modes (tx, rx, analyze, synth)"

[[bin]]
name = "ohm-tx"
path = "src/bin/tx.rs"

[[bin]]
name = "ohm-rx"
path = "src/bin/rx.rs"

[[bin]]
name = "ohm-analyze"
path = "src/bin/analyze.rs"

[[bin]]
name = "ohm-synth"
path = "src/bin/synth.rs"

[dependencies]
openham-core = { path = "../core" }
openham-frame = { path = "../frame" }
openham-codecs = { path = "../codecs" }
openham-modem = { path = "../modem" }

clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# Audio I/O
hound.workspace = true

[dev-dependencies]
quickcheck.workspace = true
quickcheck_macros.workspace = true

[features]
default = ["std"]
std = []